--- a/app/views/twitter.scala.html
+++ b/app/views/twitter.scala.html
@@ -1,9 +1,9 @@
 @(message: String)
 
-@main("Welcome to Play") {
+@main("The Public Bubble") {
 
 <section>
-    <div class="small-5 small-centered column">
+    <div style="width:500px; margin-left: auto; margin-right: auto;">
     <a class="twitter-timeline"
        href="https://twitter.com/publicbubble"
        data-widget-id="572889086744084480"
