--- a/app/views/wysiwyg.scala.html
+++ b/app/views/wysiwyg.scala.html
@@ -1,6 +1,6 @@
-<script src="@routes.Assets.at("javascripts/wysiwyg/wysiwyg.js")"></script>
-<script src="@routes.Assets.at("javascripts/wysiwyg/wysiwyg-editor.js")"></script>
-<script src="@routes.Assets.at("javascripts/wysiwyg/initi-wysiwyg-editor.js")"></script>
+<script src="@routes.Assets.at("/public","/javascripts/wysiwyg/wysiwyg.js")"></script>
+<script src="@routes.Assets.at("/public","/javascripts/wysiwyg/wysiwyg-editor.js")"></script>
+<script src="@routes.Assets.at("/public","/javascripts/wysiwyg/initi-wysiwyg-editor.js")"></script>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="@routes.Assets.at("javascripts/wysiwyg/wysiwyg-editor.css")"/>
+<link rel="stylesheet" type="text/css" href="@routes.Assets.at("/public","/javascripts/wysiwyg/wysiwyg-editor.css")"/>
 
