--- a/app/views/contentCreator.scala.html
+++ b/app/views/contentCreator.scala.html
@@ -9,41 +9,41 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more."/>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/blue_theme.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/foundation/foundation.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/foundation/normalize.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/vendor/modernizr.js")"></script>
-        <script src="@routes.Assets.at("javascripts/vendor/jquery.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/react/react.js")"></script>
-        <script src="@routes.Assets.at("javascripts/react/JSXTransformer.js")"></script>
-        <script src="@routes.Assets.at("javascripts/jquery-ui/jquery-ui.min.js")"></script>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("/public","/stylesheets/blue_theme.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("/public","/stylesheets/foundation/foundation.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("/public","/stylesheets/foundation/normalize.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("/public","/stylesheets/main.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("/public","/images/favicon.png")">
+        <script src="@routes.Assets.at("/public","/javascripts/vendor/modernizr.js")"></script>
+        <script src="@routes.Assets.at("/public","/javascripts/vendor/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("/public","/javascripts/react/react.js")"></script>
+        <script src="@routes.Assets.at("/public","/javascripts/react/JSXTransformer.js")"></script>
+        <script src="@routes.Assets.at("/public","/javascripts/jquery-ui/jquery-ui.min.js")"></script>
         @wysiwyg()
     </head>
     <div style="background-color: #2D2D87">
     <header class="row">
         <div id="bubble-banner" >
-        <img style="height:50px" src="@routes.Assets.at("images/logo_mobile.svg")" class="large-4 columns show-for-small-only"">
+        <img style="height:50px" src="@routes.Assets.at("/public","/images/logo_mobile.svg")" class="large-4 columns show-for-small-only"">
         <nav id="bubble-banner-nav">
             <ul class="button-group">
-              <li><a class="button nav-button" href="/update/frontpage">
-                <img class="nav-icon" src="@routes.Assets.at("icons/fi-page.svg")">
-                <label>Update the frontpage</label>
+              <li><a class="button nav-button" href="/update/introduction">
+                <img class="nav-icon" src="@routes.Assets.at("/public","/icons/fi-page.svg")">
+                <label>Update the introduction</label>
                 </a>
             </li>
               <li><a class="button nav-button" href="/update/committee">
-                <img class="nav-icon" src="@routes.Assets.at("icons/fi-torsos-all.svg")">
+                <img class="nav-icon" src="@routes.Assets.at("/public","/icons/fi-torsos-all.svg")">
                 <label>Update the committee</label>
                 </a>
             </li>
             <li><a class="button nav-button" href="/create/event">
-                <img class="nav-icon" src="@routes.Assets.at("icons/fi-calendar.svg")">
+                <img class="nav-icon" src="@routes.Assets.at("/public","/icons/fi-calendar.svg")">
                 <label>Create an event</label>
                 </a>
             </li>
             <li><a class="button nav-button" href="/create/blog">
-                <img class="nav-icon" src="@routes.Assets.at("icons/fi-comments.svg")">
+                <img class="nav-icon" src="@routes.Assets.at("/public","/icons/fi-comments.svg")">
                 <label>Create a Blog</label>
                 </a>
             </li>
@@ -65,7 +65,7 @@
     </div>
 
     <!-- foundation dependencies -->
-    <script src="@routes.Assets.at("javascripts/foundation/foundation.js")"></script>
+    <script src="@routes.Assets.at("/public","/javascripts/foundation/foundation.js")"></script>
     <script>
       $(document).foundation();
 
