--- a/app/views/editCommittee.scala.html
+++ b/app/views/editCommittee.scala.html
@@ -1,7 +1,7 @@
 @(committee : Seq[Member])
 
 @contentCreator("Edit the frontpage") {
-<script src="@routes.Assets.at("javascripts/vue/vue.js")"></script>
+<script src="@routes.Assets.at("/public","/javascripts/vue/vue.js")"></script>
 
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
   <h4 class="text-center">Edit the committee</h4>
