--- a/app/views/editFrontpage.scala.html
+++ b/app/views/editFrontpage.scala.html
@@ -1,7 +1,7 @@
 @(frontpage: StaticPage)
 
 @contentCreator("Edit the frontpage") {
-<script src="@routes.Assets.at("javascripts/vue/vue.js")"></script>
+<script src="@routes.Assets.at("/public","/javascripts/vue/vue.js")"></script>
 
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
 <h4 class="text-center">Edit the intro page</h4>
@@ -36,7 +36,7 @@ var imageUploader = Vue.component('image-uploader', {
 var textEditor = new Vue({
     data : {"inputlabel" : "image1", "imageurl" : "@frontpage.image"},
     el: '#frontpage-editor',
-    template : '<form class="small-8 columns small-centered" action="/update/frontpage" method="post" enctype="multipart/form-data" runat="server">\
+    template : '<form class="small-8 columns small-centered" action="/update/introduction" method="post" enctype="multipart/form-data" runat="server">\
                   <image-uploader v-bind:inputLabel="inputlabel" image="/frontpage/image" v-bind:previewheight="500" v-bind:previewwidth="500"></image-uploader>\
                   <input id="wysiwyg-editor" value="@frontpage.content" name="intro"/>\
                   <button>Submit</button>\
