--- a/app/views/facebook.scala.html
+++ b/app/views/facebook.scala.html
@@ -10,8 +10,8 @@
 }(document, 'script', 'facebook-jssdk'));
 </script>
 
-<div class="small-5 small-centered column">
-    <div class="fb-page" data-href="https://www.facebook.com/thepublicbubble" data-width="1000px" data-height="500px" data-hide-cover="false" data-show-facepile="true" data-show-posts="true">
+<div style="margin-left: auto; margin-right: auto; width: 500px">
+    <div class="fb-page" data-href="https://www.facebook.com/thepublicbubble" data-width="500px" data-height="500px" data-hide-cover="false" data-show-facepile="true" data-show-posts="true">
         <div class="fb-xfbml-parse-ignore">
             <blockquote cite="https://www.facebook.com/thepublicbubble">
                 <a href="https://www.facebook.com/thepublicbubble">The Public Bubble</a>
