--- a/app/views/portal.scala.html
+++ b/app/views/portal.scala.html
@@ -1,13 +1,13 @@
 @(id: String)
 
-@main("Welcome to Play") {
+@main("The Public Bubble") {
 
 <h1>Hello! @{id}</h1>
 
 <li><a href="/create/event">Add or Edit an Event</a></li>
 <li><a href="/create/blog">Add or Edit a Blog entry</a></li>
 <li><a href="/update/committee">Edit the committee</a></li>
-<li><a href="/update/frontpage">Edit the frontpage</a></li>
+<li><a href="/update/introduction">Edit the introduction</a></li>
 
 @logoutButton()
 
