Center intro image

--- a/app/views/aboutUs.scala.html
+++ b/app/views/aboutUs.scala.html
@@ -4,7 +4,7 @@
 
 <div class="row">
     <h1 class="text-center column">The Public Bubble</h1>
-    <img class="img-responsive"
+    <img class="img-responsive" style="margin-left:auto; margin-right:auto"
          src="/frontpage/image"/>
 
     <p class="large-9 columns">
